<resources>
    <string name="app_name">TeamPathy</string>
    <string name="Inputaccount">輸入帳號</string>
    <string name="Inputpassword">輸入密碼</string>
    <string name="logIn">登入</string>
    <string name="register">註冊</string>
    <string name="forgotPassword">忘記密碼?</string>
    <string name="inputname">輸入暱稱</string>
    <string name="inputPasswordConfirm">密碼確認</string>
    <string name="finishRegistering">完成註冊</string>
    <string name="accountDuplicated">帳號已重複</string>
    <string name="accountNotFound">帳號或密碼錯誤</string>
    <string name="modelValidation">註冊格式錯誤</string>
    <string name="app_chinese_name">行動化團隊合作系統</string>
    <string name="title_activity_project">ProjectActivity</string>
    <string name="action_settings">Settings</string>
    <string-array name="month_names">
        <item>Jan.</item>
        <item>Feb.</item>
        <item>Mar.</item>
        <item>Apr.</item>
        <item>May.</item>
        <item>June.</item>
        <item>July.</item>
        <item>Aug.</item>
        <item>Sept.</item>
        <item>Oct.</item>
        <item>Nov.</item>
        <item>Dec.</item>
    </string-array>
    <string name="issue_title">文章名稱</string>
    <string name="issue_content">文章內容</string>
    <string name="CreateIssue">新增文章</string>
    <string name="create">新增</string>
    <string name="cancel">取消</string>
    <string name="confirm">確認</string>
    <string name="make_sure_to_cancel">確定要取消嗎?</string>
    <string name="title_cannot_be_empty">標題不能為空。</string>
    <string name="get_all_issue_types">選取文章分類</string>
    <string name="please_choose_an_issue_type">請選擇文章分類</string>
    <string name="issue_content_cannot_be_empty">文章內容不能為空</string>
    <string name="issue_created_completed">文章新增完畢</string>
    <string name="card_transitionname">card</string>
    <string name="issue_title_transitionname">issuetitle</string>
    <string name="test_long_string">就是阿，這幾天我一直覺得Woo不太好用，我調查過他們的Request Url，想了很久怎麼讓我的配對結果只能是女人，但她嗎的，失敗了javaScript竟然失敗了，我哭著臉回家找媽。就是阿，這幾天我一直覺得Woo不太好用，我調查過他們的Request Url，想了很久怎麼讓我的配對結果只能是女人，但她嗎的，失敗了javaScript竟然失敗了就是阿，這幾天我一直覺得Woo不太好用，我調查過他們的Request Url，想了很久怎麼讓我的配對結果只能是女人，但她嗎的，失敗了javaScript竟然失敗了就是阿，這幾天我一直覺得Woo不太好用，我調查過他們的Request Url，想了很久怎麼讓我的配對結果只能是女人，但她嗎的，失敗了javaScript竟然失敗了就是阿，這幾天我一直覺得Woo不太好用，我調查過他們的Request Url，想了很久怎麼讓我的配對結果只能是女人，但她嗎的，失敗了javaScript竟然失敗了就是阿，這幾天我一直覺得Woo不太好用，我調查過他們的Request Url，想了很久怎麼讓我的配對結果只能是女人，但她嗎的，失敗了javaScript竟然失敗了就是阿，這幾天我一直覺得Woo不太好用，我調查過他們的Request Url，想了很久怎麼讓我的配對結果只能是女人，但她嗎的，失敗了javaScript竟然失敗了</string>
    <string name="issue_content_transitionname">issuecontent</string>
    <string name="create_issue_comment">新增留言</string>
    <string name="issue_comment_content">留言內容</string>
    <string name="comment_created_completed">留言新增完畢</string>
    <string name="watch">觀看</string>
    <string name="enter">進入</string>
    <string name="title_cannt_be_exceeding_12_words">標題請勿超過12個字</string>
    <string name="describe_how_you_feel_about_working">表達你的工作心情吧!</string>
    <string name="timeline_created_completed">工作心情小語新增完畢</string>
    <string name="timeline_removed_completed">工作心情小語刪除完畢</string>
    <string name="send">送出</string>
    <string name="password_not_conform">密碼不吻合!</string>
    <string name="pm">管理者</string>
    <string name="leader">團長</string>
    <string name="member">團員</string>
    <string name="current_task">目前工作</string>
    <string name="member_list">成員清單</string>
    <string name="task_start_date">起始日期</string>
    <string name="task_end_date">結束日期</string>
    <string name="todotask_description">代辦事項描述</string>
    <string name="participate_to_exists_project">加入現有專案</string>
    <string name="create_a_new_project">創建新專案</string>
    <string name="project_name">專案名稱</string>
    <string name="project_description">專案敘述</string>
    <string name="logout">登出</string>
    <string name="home_page">首頁</string>
    <string name="profile">個人資料</string>
    <string name="whole_timeline">整體動態牆</string>
    <string name="openDrawer">開啟</string>
    <string name="closeDrawer">關閉</string>
    <string name="setPassword">設置密碼</string>
    <string name="project_category">專案性質(團康,報告,工作..)</string>
    <string name="please_input_project_title">請輸入專案名稱</string>
    <string name="please_input_project_type">請輸入專案性質</string>
    <string name="please_input_project_description">請輸入專案敘述</string>
    <string name="search">搜尋</string>
    <string name="join">加入</string>
    <string name="already_in_project">已加入</string>
    <string name="searching_project">搜尋專案中...</string>
    <string name="task_analysis">工作分析</string>
    <string name="save">儲存</string>
    <string name="please_input_taskGroup_title">請輸入工作群組名稱</string>
    <string name="please_input_todotask_title">請輸入工作名稱</string>
    <string name="start_date">起始日期</string>
    <string name="end_date">結束日期</string>
    <string name="contributions">貢獻值</string>
    <string name="add">新增</string>
    <string name="save_charts">儲存工作分析</string>
    <string name="update">更新</string>
    <string name="sure_to_update_task_analysis">確定要更新工作結構圖嗎？</string>
    <string name="page_is_not_ready">頁面尚未準備完全。</string>
    <string name="leave">離開</string>
    <string name="loading">載入中</string>
    <string name="please_wait">請等待...</string>
    <string name="account_length_must_longer_than_seven">帳號長度必須大於7</string>
    <string name="delete">刪除</string>
    <string name="sure_to_delete">確定要刪除</string>
    <string name="project_has_been_joined">已加入專案</string>
    <string name="input_project_password">輸入專案密碼</string>
    <string name="issue_comment_content_cannot_be_empty">留言內容請勿為空</string>
    <string name="search_projects">搜尋專案</string>
    <string name="password_wrong">密碼錯誤。</string>
    <string name="please_input_search_keyword">請填入搜尋關鍵字</string>
    <string name="password_length_should_be_longer_than_7">密碼長度必須大於7</string>
    <string name="console">控制台</string>
    <string name="wbs">工作結構圖</string>
    <string name="gantt">甘特圖</string>
    <string name="task_review_section">審核工作區</string>
    <string-array name="task_analysis_sections">
        <item>@string/console</item>
        <item>@string/wbs</item>
        <item>@string/gantt</item>
        <item>@string/task_review_section</item>
    </string-array>
    <string-array name="wbs_console_todotask_actions">
        <item>編輯工作項目</item>
        <item>刪除工作項目</item>
        <item>指派工作 (管理者及團長)</item>
    </string-array>
    <string-array name="wbs_console_taskgroup_actions">
        <item>編輯工作群組</item>
        <item>刪除工作群組</item>
    </string-array>
    <string-array name="member_todo_todolist_actions">
        <item>@string/commit_todo</item>
        <item>@string/set_as_doing</item>
    </string-array>
    <string-array name="member_undoing_todolist_actions">
        <item>@string/commit_todo</item>
        <item>@string/cancel_doing</item>
    </string-array>
    <string-array name="member_uncommitted_todolist_actions">
        <item>@string/cancel_commit_todo</item>
    </string-array>
    <string name="commit_todo">提交工作</string>
    <string name="cancel_commit_todo">取消提交</string>
    <string name="set_as_doing">設為執行中</string>
    <string name="cancel_doing">取消執行中</string>
    <string name="notify">通知</string>
    <string name="task">工作</string>
    <string name="jotting">心情小語</string>
    <string name="postAction">新增了</string>
    <string name="deleteAction">刪除了</string>
    <string name="putAction">編輯了</string>
    <string name="signInAction">登入了</string>
    <string name="signOutAction">登出了</string>
    <string name="timeline">動態</string>
    <string name="issue">文章</string>
    <string name="issueComment">留言</string>
    <string name="create_task_group">創建工作群組</string>
    <string name="create_todotask">創建工作項目</string>
    <string name="name_cannot_be_empty">名稱不能為空</string>
    <string name="error">錯誤</string>
    <string name="please_reconnect_network">錯誤，請確認網路是否連接，並重啟APP。</string>
    <string name="please_select_end_date">請選擇結束日期</string>
    <string name="please_select_start_date">請選擇起始日期</string>
    <string name="description_cannot_be_empty">描述不可為空</string>
    <string name="assign_task">指派工作</string>
    <string name="are_u_sure_to_change_assigned_member">此工作已被指派，請問是否要更換指派成員?</string>
    <string-array name="create_task_type_list">
        <item>創建工作群組</item>
        <item>創建工作項目</item>
    </string-array>
    <string name="todotask_pending">審核中</string>
    <string name="todotask_pass">完成</string>
    <string name="todotask_doing">執行中</string>
    <string name="todotask_todo">待辦</string>
    <string name="alter_complete">變更完成</string>
    <string name="photo_uploaded_complete">照片上傳完畢</string>
    <string name="photo_has_not_been_uploaded">照片尚未上傳完畢 ...</string>
    <string-array name="take_picture_options">
        <item>拍攝照片</item>
        <item>從相簿挑選照片</item>
    </string-array>
    <string name="point"> pt</string>
    <string name="choose_the_review_option">選擇欲進行之審核動作</string>
    <string-array name="review_task_options">
        <item>通過審核</item>
        <item>駁回審核</item>
    </string-array>
    <string name="watch_todolist">觀看待辦清單</string>
    <string name="boot_member">踢除成員</string>
    <string name="change_position">調整職位</string>
    <string name="promote_to_manager">升至管理者</string>
    <string name="promote_to_member">降為一般成員</string>
    <string name="handover_leader">團長交接</string>
    <string name="select_actions_for_member">選擇欲對成員進行動作</string>
    <string name="todo_no_dependency">無依賴</string>
    <string name="name_cannot_be_duplicated">名稱不能重複</string>
    <string name="the_task_has_passed">此工作項目已經通過審核。</string>
    <string name="your_task_should_be_reviewed_by_other">要借助其他管理者才能審核自己的工作唷！</string>
    <string name="notice">注意</string>
    <string name="you_just_rejected_your_task">你剛剛駁回了自己的工作</string>
    <string name="issue_date_transitionname">issue_date_transitionname</string>
    <string name="issue_category_transitionname">issue_category_transitionname</string>
    <string name="contribution">貢獻度</string>
    <string name="no_more_remind">下次不再提醒</string>
    <string name="cwhenyou_cannot_edit_the_task_after_pass">通過審核之後就不能在編輯此工作項目囉！</string>
    <string name="caseover_rewards">結案獎勵結算</string>
    <string name="position_reward">職位獎勵</string>
    <string name="partake_reward">參與度獎勵</string>
    <string name="tasks_contribution_reward">工作貢獻比例獎勵</string>
    <string name="project_caseover">專案結案</string>
    <string-array name="office_options">
        <item>@string/watch_todolist</item>
        <item>@string/change_position</item>
        <item>@string/boot_member</item>
    </string-array>
    <string-array name="change_position_options">
        <item>@string/promote_to_manager</item>
        <item>@string/promote_to_member</item>
        <item>@string/handover_leader</item>
    </string-array>
    <string name="timeline_wall">動態牆</string>
    <string name="forum">討論區</string>
    <string name="todolist">代辦清單</string>
    <string name="office">辦公室</string>
    <string name="confirm_to_close_case">確認結案</string>
    <string-array name="project_sections">
        <item>@string/timeline_wall</item>
        <item>@string/forum</item>
        <item>@string/todolist</item>
        <item>@string/office</item>
    </string-array>
    <string-array name="project_sections_caseover">
        <item>@string/timeline_wall</item>
        <item>@string/forum</item>
        <item>@string/office</item>
    </string-array>
    <string name="task_create" formatted="false">%s 新增了工作 %s</string>
    <string name="task_delete" formatted="false">%s 刪除了工作 %s</string>
    <string name="task_doing" formatted="false">%s 正在執行 %s</string>
    <string name="task_undoing" formatted="false">%s 取消執行 %s</string>
    <string name="task_commit" formatted="false">%s 提交了 %s </string>
    <string name="done_task_number">已完成項目:&#160;</string>
    <string name="not_done_task_amount">未完成項目:&#160;</string>
    <string name="not_reviewed_task_amount">尚未審核:&#160;</string>
    <string name="not_assigned_task_amount">尚未分配項目:&#160;</string>
</resources>