<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <android.support.design.widget.TextInputLayout
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            app:counterEnabled="true"
            app:counterMaxLength="12"
            app:errorEnabled="true"
            android:hint="@string/please_input_taskGroup_title">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/title_TXT_taskGroupdialog"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:inputType="text"
                android:maxLength="12"
                android:maxLines="1" />

        </android.support.design.widget.TextInputLayout>

        <Spinner
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="5dp"
            android:id="@+id/taskGroup_categorySpinner"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                android:id="@+id/cancelBTN_taskGroup_dialog"
                android:layout_weight="1"
                android:layout_margin="12dp"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/confirm"
                android:id="@+id/confirmBTN_taskGroup_dialog"
                android:layout_weight="1"
                android:layout_margin="12dp"/>
        </LinearLayout>

    </LinearLayout>
</ScrollView>