<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingTop="20dp"
    android:paddingLeft="25dp"
    android:paddingRight="25dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <FrameLayout
                android:layout_width="100dp"
                android:layout_height="90dp"
                android:layout_gravity="center_horizontal">
                <ImageButton
                    android:layout_width="100dp"
                    android:layout_height="90dp"
                    android:background="@color/transpaernt"
                    android:scaleType="fitCenter"
                    android:src="@drawable/project_icon"
                    android:id="@+id/takePhotoBtn"/>
                <ProgressBar
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:visibility="gone"
                    android:id="@+id/photoUploadingProgress"/>
            </FrameLayout>


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:hint="@string/project_name"
                app:counterEnabled="true"
                app:counterMaxLength="12"
                app:errorEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/titleEd"
                    android:layout_width="230dp"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:inputType="text"
                    android:maxLength="12"
                    android:maxLines="1" />

            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <CheckBox
            android:id="@+id/passwordChbx"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/setPassword" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            app:counterEnabled="true"
            app:counterMaxLength="18"
            app:errorEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/passwordEd"
                android:layout_width="230dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:inputType="textPassword"
                android:maxLength="18"
                android:maxLines="1" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:hint="@string/project_category"
            app:counterEnabled="true"
            app:counterMaxLength="10"
            app:errorEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/categoryEd"
                android:layout_width="230dp"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:inputType="text"
                android:maxLength="10"
                android:maxLines="1" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            app:counterEnabled="true"
            app:errorEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/descriptionEd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:hint="@string/project_description"
                android:maxLines="6"
                android:minLines="4" />
        </android.support.design.widget.TextInputLayout>

    </LinearLayout>
</ScrollView>