<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable
            name="obj"
            type="com.ood.clean.waterball.teampathy.Domain.Model.ProjectProgressInfo"/>
    </data>
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">
            <ProgressBar
                android:id="@+id/circularProgressbar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:indeterminate="false"
                android:max="100"
                android:progress="@{(obj.done / (obj.sum == 0 ? 1 : obj.sum) * 100)}"
                android:layout_centerInParent="true"
                android:progressDrawable="@drawable/circular"
                android:secondaryProgress="100"/>

            <ImageView
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:background="@drawable/circular"
                android:layout_centerInParent="true"/>

            <TextView
                android:id="@+id/progresstxt"
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:gravity="center"
                android:text="@{String.valueOf(obj.done / (obj.sum == 0 ? 1 : obj.sum) * 100) + @string/percentage}"
                android:layout_centerInParent="true"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/progressSubtitleTxt"
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:paddingTop="45dp"
                android:gravity="center"
                android:text="@{obj.notyet == 0  ? @string/done : @string/NotDone}"
                android:layout_centerInParent="true"
                android:textSize="12sp"  />
        </RelativeLayout >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="17sp"
                    android:text="@string/done_task_number" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="17sp"
                    android:textColor="@{obj.done > 0 ? @color/gray_number : @color/red_number}"
                    android:text="@{String.valueOf(obj.done)}" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="17sp"
                    android:text="@string/not_done_task_amount" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="17sp"
                    android:textColor="@{obj.notyet > 0 ? @color/red_number : @color/gray_number}"
                    android:text="@{String.valueOf(obj.done)}" />
            </LinearLayout>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="17sp"
                    android:text="@string/not_reviewed_task_amount" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="17sp"
                    android:textColor="@{obj.notReviewed > 0 ? @color/red_number : @color/gray_number}"
                    android:text="@{String.valueOf(obj.notReviewed)}" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="17sp"
                    android:text="@string/not_assigned_task_amount" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="17sp"
                    android:textColor="@{obj.notAssigned > 0 ? @color/red_number : @color/gray_number}"
                    android:text="@{String.valueOf(obj.notAssigned)}" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</layout>